fix: Melhora contraste do modal de login com o fundo

--- a/src/views/Login/styles.scss
+++ b/src/views/Login/styles.scss
@@ -9,7 +9,7 @@
     height: 100%;
     position: fixed;
     z-index: 100;
-    background-color: rgba(39, 39, 39, 0.788);
+    background-color: rgba(50, 50, 50, 0.7);
     filter: blur(8px);
   }
 
@@ -28,6 +28,7 @@
     background-color: rgba(12, 12, 12, 0.541);
     border-radius: 10px;
     color: white;
+    box-shadow: 0 0 25px 5px rgba(12, 12, 12, 0.2);
 
     > .logo {
       width: 160px;
